# PyrumBot

./: keep_alive.py  main.py  pyproject.toml  readme.md
cogs/: Emotes.py  GitHub.py  Image.py  Moderation.py  Other.py  Utils.py
commands/: _utils.py  ask.py  embed_template.py  help.py  kick.py  serverinfo.py  storyscript.py  userinfo.py
commands/emotes/: addemote.py
